syntax = "proto3";

package com.trechina.proto;

option java_package = "com.trechina.proto";
option java_outer_classname = "StockProto";

service StockGrpcService {
  rpc FindByCode(Stock) returns (Stocks) {}
}

message Stock {
  int64 storeCode = 1;
  string productCode = 2;
  string stockDate = 3;
}

message StockResponse {
  int64 storeCode = 1;
  string productCode = 2;
  string stockDate = 3;
  double quantity = 4;
}

message Stocks {
  repeated StockResponse stockResponse = 1;
}
